# paz

./: .gitignore  LICENSE  LICENSE_pyperclip  README.md  paz.py  paz.v  pyperclip.py  v.mod
bishop/: bishop.c  install.sh
hare/: main.ha  split.py
haskell/: Paz.hs  paz.cabal
haskell/app/: Bishop.hs  Config.hs  ConfigData.hs  ConfigParser.hs  ConfigProvider.hs  Main.hs  Password.hs  Paz.hs  Resolve.hs
ocaml/paz/: dune-project  paz.opam
ocaml/paz/lib/: alphabet.ml  alphabet.mli  bishop.ml  bishop.mli  check.ml  check.mli  dune  hashing.ml  hashing.mli  ini.ml  ini.mli  maybe.ml  params.ml  password.ml  password.mli
ocaml/paz/test/: dune
v/: pazt_v  v.mod
