cabal-version:      2.4
name:               paz
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Johan Egneblad
maintainer:         johan@egneblad.se

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common professional-properties
    default-language: Haskell2010
    build-depends:    base ^>=4.17.2.0,
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -Wnoncanonical-monad-instances
        -- -Werror
        -- -O2

executable paz
    import: professional-properties

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Paz,
                      Password,
                      ConfigData,
                      ConfigParser,
                      ConfigProvider,
                      Resolve,
                      Bishop

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: DataKinds,
    --                   DeriveGeneric,
    --                   OverloadedStrings,
    --                   TypeOperators
    build-depends:    bytestring >=0.10.12.1,
                      base64-bytestring ==1.2.1.0,
                      cryptohash-sha512 ==0.11.102.0,
                      cryptohash-sha256 ==0.11.102.1,
                      cryptohash-md5 ==0.11.101.0,
                      optparse-applicative ==0.18.1.0,
                      directory ==1.3.6.2,
                      containers ==0.6.4.1,
                      array ==0.5.4.0
    hs-source-dirs:   app
