(lang dune 3.16)

(name paz)

(generate_opam_files true)

(source
 (github eblade/paz))

(authors "Johan Egneblad")

(maintainers "Johan Egneblad")

(license "BSD 3-Clause license")

(documentation https://github/eblade/paz)

(package
 (name paz)
 (synopsis "A CLI version of SGP with support for config in a file")
 (description "Supports MD5, SHA512 and SHA256")
 (depends ocaml dune base64 sha)
 (tags
  (topics "password manager" "password generator")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
